--- a/src/styles/components/c-tabs.sass
+++ b/src/styles/components/c-tabs.sass
@@ -187,6 +187,7 @@
 		justify-content: space-between
 		margin-bottom: 40px
 		+xs
+			margin-bottom: 25px
 			flex-wrap: wrap
 			justify-content: center
 		&-title
@@ -196,10 +197,9 @@
 		&-col
 			+xs
 				flex: 0 1 auto
+				margin-bottom: 20px
 			&:nth-child(2)
 				flex: 0 0 230px
-				+xs
-					display: none
 				
 	&__tab-inner
 		font-size: 0
