--- a/src/styles/components/footer.sass
+++ b/src/styles/components/footer.sass
@@ -37,6 +37,8 @@
 		padding-left: 25px
 		+xs
 			padding-left: 0
+	&_landing .info-block__call-btn
+		margin: 0!important
 	&_landing .info-block__tel
 		margin-left: 20px
 		margin-right: 10px
