--- a/src/styles/components/subs-block.sass
+++ b/src/styles/components/subs-block.sass
@@ -1,8 +1,10 @@
 .subs-block
+	position: relative
+	z-index: 1
 	$parent: &
 	background: #207bd2
 	&_yellow
-		background: $yellow
+		background: #ffd52f
 	&_yellow &__container
 		padding: 60px 15px 60px
 		+r(1599)
