--- a/src/styles/index.sass
+++ b/src/styles/index.sass
@@ -38,5 +38,6 @@
 @import 'components/spec'
 @import 'components/schedule'
 @import 'components/contact'
+@import 'components/popup'
 @import 'libs/select2'
 @import 'hamburgers/hamburgers'
