--- a/src/styles/partials/_svg.scss
+++ b/src/styles/partials/_svg.scss
@@ -10,6 +10,12 @@
   fill: #0162a7;
   stroke: initial;
 }
+.icon-close {
+  width: 1em;
+  height: 1em;
+  fill: currentColor;
+  stroke: initial;
+}
 .icon-facebook {
   width: 1em;
   height: 1em;
