--- a/src/styles/partials/letters-spr.sass
+++ b/src/styles/partials/letters-spr.sass
@@ -1,107 +1,149 @@
 .icon-letter-k, .icon-letter-o, .icon-letter-b-mod, .icon-letter-c, .icon-letter-u,
-.icon-letter-t, .icon-letter-a, .icon-letter-f, .icon-letter-v, .icon-letter-m,
-.icon-letter-d, .icon-letter-n, .icon-letter-i, .icon-letter-bottle, .icon-letter-l,
-.icon-letter-bottle-m, .icon-letter-b, .icon-letter-r, .icon-letter-e, .icon-letter-z
+.icon-letter-t, .icon-letter-f, .icon-letter-d, .icon-letter-v, .icon-letter-a,
+.icon-letter-l, .icon-letter-m, .icon-letter-b, .icon-letter-n, .icon-letter-i,
+.icon-letter-bottle, .icon-letter-bottle-m, .icon-letter-r, .icon-letter-e, .icon-letter-2,
+.icon-letter-7, .icon-letter-1, .icon-letter-8, .icon-letter-z, .icon-letter-6,
+.icon-letter-5, .icon-letter-3, .icon-letter-4
 	display: inline-block
 	vertical-align: middle
 	background: url("../img/icons/letters-spr.png") no-repeat
 
 .icon-letter-k
-	background-position: -4px -0px
+	background-position: -5px -0px
 	width: 133px
 	height: 105px
 
 .icon-letter-o
-	background-position: -4px -109px
+	background-position: -5px -110px
 	width: 119px
 	height: 120px
 
 .icon-letter-b-mod
-	background-position: -4px -233px
+	background-position: -5px -235px
 	width: 117px
 	height: 131px
 
 .icon-letter-c
-	background-position: -4px -368px
+	background-position: -5px -371px
 	width: 117px
 	height: 128px
 
 .icon-letter-u
-	background-position: -4px -500px
+	background-position: -5px -504px
 	width: 113px
 	height: 102px
 
 .icon-letter-t
-	background-position: -4px -606px
-	width: 99px
-	height: 106px
+	background-position: -5px -611px
+	width: 111px
+	height: 119px
+
+.icon-letter-f
+	background-position: -5px -735px
+	width: 110px
+	height: 118px
+
+.icon-letter-d
+	background-position: -5px -858px
+	width: 109px
+	height: 153px
+
+.icon-letter-v
+	background-position: -5px -1016px
+	width: 102px
+	height: 122px
 
 .icon-letter-a
-	background-position: -4px -716px
+	background-position: -5px -1143px
 	width: 98px
 	height: 90px
 
-.icon-letter-f
-	background-position: -4px -810px
-	width: 98px
-	height: 105px
-
-.icon-letter-v
-	background-position: -4px -919px
-	width: 96px
-	height: 115px
+.icon-letter-l
+	background-position: -5px -1238px
+	width: 97px
+	height: 144px
 
 .icon-letter-m
-	background-position: -4px -1038px
+	background-position: -5px -1387px
 	width: 95px
 	height: 79px
 
-.icon-letter-d
-	background-position: -4px -1121px
-	width: 92px
-	height: 129px
+.icon-letter-b
+	background-position: -5px -1471px
+	width: 93px
+	height: 137px
 
 .icon-letter-n
-	background-position: -4px -1254px
+	background-position: -5px -1613px
 	width: 90px
 	height: 105px
 
 .icon-letter-i
-	background-position: -4px -1363px
+	background-position: -5px -1723px
 	width: 89px
 	height: 101px
 
 .icon-letter-bottle
-	background-position: -4px -1468px
+	background-position: -5px -1829px
 	width: 86px
 	height: 112px
 
-.icon-letter-l
-	background-position: -4px -1584px
-	width: 80px
-	height: 119px
-
 .icon-letter-bottle-m
-	background-position: -4px -1707px
+	background-position: -5px -1946px
 	width: 78px
 	height: 103px
 
-.icon-letter-b
-	background-position: -4px -1814px
-	width: 71px
-	height: 105px
-
 .icon-letter-r
-	background-position: -4px -1923px
+	background-position: -5px -2054px
 	width: 65px
 	height: 84px
 
 .icon-letter-e
-	background-position: -4px -2011px
+	background-position: -5px -2143px
 	width: 63px
 	height: 83px
 
+.icon-letter-2
+	background-position: -73px -2143px
+	width: 59px
+	height: 48px
+
+.icon-letter-7
+	background-position: -75px -2054px
+	width: 57px
+	height: 64px
+
+.icon-letter-1
+	background-position: -73px -2196px
+	width: 55px
+	height: 71px
+
+.icon-letter-8
+	background-position: -5px -2231px
+	width: 55px
+	height: 61px
+
 .icon-letter-z
-	background-position: -73px -1923px
+	background-position: -65px -2272px
 	width: 55px
 	height: 77px
+
+.icon-letter-6
+	background-position: -5px -2297px
+	width: 52px
+	height: 48px
+
+.icon-letter-5
+	background-position: -5px -2350px
+	width: 47px
+	height: 71px
+
+.icon-letter-3
+	background-position: -88px -1946px
+	width: 44px
+	height: 58px
+
+.icon-letter-4
+	background-position: -57px -2354px
+	width: 43px
+	height: 65px
