--- a/src/styles/components/common.sass
+++ b/src/styles/components/common.sass
@@ -147,6 +147,7 @@ input.btn
 		position: relative
 		width: 20px
 		height: 20px
+		flex: 0 0 20px
 		margin-right: 8px
 		border: 2px solid #d7d7d7
 		background: $white
@@ -161,11 +162,22 @@ input.btn
 			transition: .15s ease-in
 	span
 		user-select: none
+		
 	input
 		display: none
 		&:checked + label .icon-check
 			opacity: 1
 			transform: scale(1)
+	&_more
+		text-align: left
+		label
+			align-items: flex-start
+		span
+			margin-top: 0
+			line-height: 17px
+	&_more &__square
+		margin-top: 5px
+		margin-right: 15px
 		
 .textarea
 	display: block
@@ -177,6 +189,8 @@ input.btn
 	resize: none
 	+f('geo-400', 17)
 	+placeholder-color(#8d8d8d)
+	+xs
+		padding: 15px
 
 .slider-btn
 	position: absolute
