--- a/src/styles/components/expert.sass
+++ b/src/styles/components/expert.sass
@@ -3,7 +3,7 @@
 	&__container
 	&__title
 		max-width: 1000px
-		margin: 0 auto 20px
+		margin: 0 auto 35px
 		font-size: 50px
 		line-height: 55px
 		+r(1599)
@@ -11,7 +11,7 @@
 			line-height: 40px
 			max-width: none
 			margin: 0 0 5px
-		+r(1366)
+		+r(1365)
 			font-size: 30px
 		+sm
 			margin-bottom: 0
@@ -19,8 +19,10 @@
 			font-size: 24px
 			line-height: 30px
 	&__sub-title
-		+r(1599)
-			font-size: 30px
+		text-transform: none
+		+f('geo-700', 35)
+		+r(1365)
+			font-size: 34px
 		+sm
 			font-size: 24px
 			margin-bottom: 0
@@ -28,19 +30,20 @@
 			font-size: 20px
 			line-height: 25px
 	&__content
-		padding: 50px 0 0 80px
+		margin: 0 auto 30px
+		max-width: 960px
 		+r(1599)
 			padding: 30px 0 0 0
 		.slider-btn
 			+sm
 				top: 20%
 			&_prev
-				left: calc(-20% - -80px)
+				left: -15%
 				+sm
 					left: 0
 			&_next
-				right: -20%
-				+r(1366)
+				right: -15%
+				+r(1365)
 					right: 0
 					bottom: 0
 					top: auto
@@ -49,6 +52,7 @@
 					top: 20%
 					bottom: auto
 		&-item
+			padding: 0 10px
 		&-inner
 			display: flex
 			align-items: center
@@ -56,7 +60,7 @@
 				flex-wrap: wrap
 				justify-content: center
 		&-img
-			flex: 1 0 percentage(444/1030)
+			flex: 1 0 47.3%
 			+r(1599)
 				flex: 1 0 34%
 			+sm
@@ -69,11 +73,13 @@
 			padding-left: 40px
 			color: $white
 			+f('geo-300', 20, 30)
+			+r(1599)
+				padding-right: 50px
 			+sm
-				padding-left: 0
+				padding: 0
 				text-align: center
 	&__img
-		+ratio(444, 436)
+		+ratio(444, 406)
 		+cover
 	&__info
 		margin-bottom: 15px
@@ -103,6 +109,8 @@
 			line-height: 30px
 		+xs
 			font-size: 14px
+	&__btn
+		padding: 0 32px
 	&__quote
 		position: relative
 		margin-bottom: 15px
@@ -112,6 +120,9 @@
 			font-size: 19px
 		+xs
 			font-size: 16px
+		p
+			font-size: 20px
+			
 		.icon
 			position: absolute
 			fill: $yellow
@@ -123,10 +134,3 @@
 			&:nth-of-type(2)
 				right: 0
 				bottom: 0
-	&__addition
-		margin-bottom: 13px
-		+r(1599)
-			font-size: 19px
-			line-height: 22px
-		+xs
-			font-size: 17px
