--- a/src/styles/libs/select2.scss
+++ b/src/styles/libs/select2.scss
@@ -1,5 +1,3 @@
-
-
 .select2-container {
   box-sizing: border-box;
   display: inline-block;
@@ -9,6 +7,7 @@
   font-family: "Geometria-Bold", Arial, sans-serif;
   font-weight: normal;
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .select2-container .select2-selection--single {
