--- a/src/template/components/expert.pug
+++ b/src/template/components/expert.pug
@@ -3,8 +3,7 @@ if expert ? expert : expert = []
 //begin expert
 +b.SECTION.expert.section(class= expert.classMod ? expert.classMod : '')
 	+e.container.container
-		+e.H2.title.title(data-anim-title='') Знакомьтесь, специалисты бэби-клуба в Черемушках
-		+e.H5.sub-title.title._sm(data-anim-title='') Родители каждый день доверяют им своих детей!
+		+e.H2.title.title Знакомьтесь, специалисты бэби-клуба в Черемушках
 
 		+e.content.js-expert-slider(data-anim-slow='')
 			-count = 0
@@ -17,7 +16,6 @@ if expert ? expert : expert = []
 						+e.content-text
 							+e.info
 								+e.name Лариса Коновалова
-								+e.pos Старший специалист по работе с детьми
 							+e.former
 								+e.P Самарский государственный университет
 								+e.P Специализация: педагог — психолог
@@ -26,7 +24,7 @@ if expert ? expert : expert = []
 								+e.P Каждый ребёнок - личность и задача педагога - развить лучшие качества каждого ребенка
 								+i('quote')
 								+i('quote')
-							+e.addition
-								+e.P Когда Лариса уходила в отпуск, малыши каждое утро спрашивали про неё.
-							+b.A.btn._yellow(href='#!') Задать вопрос специалисту
+							+e.A.btn.btn._yellow(href='#!') Задать вопрос специалисту
 				-count++
+
+		+e.H5.sub-title.title._sm(data-anim-slow='') Родители каждый день доверяют им своих детей!
