--- a/src/template/components/schedule.pug
+++ b/src/template/components/schedule.pug
@@ -54,14 +54,7 @@ if schedule.title ? schedule.title : schedule.title = 'НАШЕ РАСПИСАН
 				+e.LABEL(for='check-7')
 					+e.square
 						+i('check')
-					+e.SPAN 5,5 — 6,5 года
-
-			+b.check-box
-				+e.INPUT(id='check-8' type='checkbox' name='')
-				+e.LABEL(for='check-8')
-					+e.square
-						+i('check')
-					+e.SPAN Любой возраст
+					+e.SPAN 5,5 — 7 лет
 
 		+e.inner(data-anim-slow='')
 			+e.day
@@ -69,17 +62,34 @@ if schedule.title ? schedule.title : schedule.title = 'НАШЕ РАСПИСАН
 				+e.event
 					+e.SPAN.event-time 10:00 - 11:30
 					+e.SPAN.event-name Бэби-класс 1
+				+e.event
+				+e.event
+				+e.event
+				+e.event
 
 			+e.day
 				+e.day-name Вторник
-				+e.event
-					+e.SPAN.event-time 10:00 - 11:30
-					+e.SPAN.event-name Бэби-класс 1
+				+e.event._half
+					+e.SPAN.event-time 10:00 10:45
+					+e.SPAN.event-name Бэбик 1
+				+e.event._half
+					+e.SPAN.event-time 10:00 10:45
+					+e.SPAN.event-name Бэбик 2
+
 				+e.event
 					+e.SPAN.event-time 11:00 - 12:00
-					+e.SPAN.event-name Бэбик 2
+					+e.SPAN.event-name Бэбик 3
+
 				+e.event
-					+e.SPAN.event-time 13:00 - 14:00
+					+e.SPAN.event-time 12:00 - 13:00
+					+e.SPAN.event-name Бэби-сад
+
+				+e.event
+					+e.SPAN.event-time 13: - 13:30
+					+e.SPAN.event-name Бэби-класс 1
+
+				+e.event
+					+e.SPAN.event-time 13:30 - 14:00
 					+e.SPAN.event-name Бэби-класс 2
 
 			+e.day
@@ -90,24 +100,37 @@ if schedule.title ? schedule.title : schedule.title = 'НАШЕ РАСПИСАН
 				+e.event
 					+e.SPAN.event-time 09:00 - 13:00
 					+e.SPAN.event-name Бэби-сад
+				+e.event
+				+e.event
+				+e.event
 
 			+e.day
 				+e.day-name Четверг
 				+e.event
 					+e.SPAN.event-time 09:00 - 13:00
 					+e.SPAN.event-name Бэби-сад
+				+e.event
+				+e.event
+				+e.event
+				+e.event
 
 			+e.day
 				+e.day-name Пятница
 				+e.event
-					+e.SPAN.event-time 10:00 - 11:30
+					+e.SPAN.event-time 10:00 - 10:45
 					+e.SPAN.event-name Бэбик 1
 				+e.event
 					+e.SPAN.event-time 11:00 - 12:00
-					+e.SPAN.event-name Бэбик 2
+					+e.SPAN.event-name Бэбик 3
 				+e.event
-					+e.SPAN.event-time 13:00 - 14:00
+					+e.SPAN.event-time 12:00 - 13:00
+					+e.SPAN.event-name Бэби-сад
+				+e.event
+					+e.SPAN.event-time 13:00 - 13:30
 					+e.SPAN.event-name Бэби-класс 1
+				+e.event
+					+e.SPAN.event-time 13:30 - 14:00
+					+e.SPAN.event-name Бэби-класс 2
 
 			+e.day
 				+e.day-name Суббота
@@ -117,9 +140,16 @@ if schedule.title ? schedule.title : schedule.title = 'НАШЕ РАСПИСАН
 				+e.event
 					+e.SPAN.event-time 09:00 - 13:00
 					+e.SPAN.event-name Бэби-сад
+				+e.event
+				+e.event
+				+e.event
 
 			+e.day
 				+e.day-name Воскресенье
 				+e.event
 					+e.SPAN.event-time 10:00 - 11:30
 					+e.SPAN.event-name Бэби-класс 1
+				+e.event
+				+e.event
+				+e.event
+				+e.event
