--- a/src/template/components/why-us.pug
+++ b/src/template/components/why-us.pug
@@ -1,37 +1,37 @@
 if whyUs ? whyUs : whyUs = []
-if whyUs.title ? whyUs.title : whyUs.title = 'почему каждый месяц 25 000 детей приходят в бэби-клуб'
 
 //begin why-us
 +b.SECTION.why-us.section(data-anchor='why-us' class= whyUs.classMod ? whyUs.classMod : '')
 	+e.container.container
 
-		+e.H2.title.title._black(data-anim-title='')= whyUs.title
+		+e.H2.title.title._black почему каждый месяц
+		+e.H2.title.title._black 25 000 детей приходят в бэби-клуб
 
 		+e.inner
 			-
 				whyList = [{
-				icon: 'bottle-m',
+				icon: '1',
 				descr: 'Мы внимательно относимся к психологическому здоровью детей. Они познают мир в комфортном для себя ритме, который зависит от особенностей восприятия и харектера каждого.'
 				}, {
-				icon: 'k',
+				icon: '2',
 				descr: 'В большинстве наших клубов уже установлено видеонаблюдение, что бы родители могли быть спокойны за своего ребенка и... первым радоваться его успехам!'
 				}, {
-				icon: 'e',
+				icon: '3',
 				descr: 'Даже самым непоседливым ребятам в Бэби-клубе комфортно — дети могут чувствовать себя свободно во время затяний и они не устают, чередуя короткие задание с увлекательными переменками.'
 				}, {
-				icon: 'l',
+				icon: '4',
 				descr: 'Зрение и осанда детей поддерживатся в первозданном виде благодаря использованию только здоровьесберегающих методик. Подвижные игры, музыкальные и танцевальные минутки помогают сохранять  «в здоровом теле здоровый дух».'
 				}, {
-				icon: 'b',
+				icon: '5',
 				descr: 'Мы помогаем родителям психологически грамотно общаться со своим ребёнком, чтобы малыш вырос гармоничным человекм, способным найти своё истинное призвание.'
 				}, {
-				icon: 'u',
+				icon: '6',
 				descr: 'Что бы пребывание ребенка в клубе было комфортным и безопасным, в проведении затяния принимают участие специалист по работе с детьми и помошник.'
 				}, {
-				icon: 'i',
+				icon: '7',
 				descr: 'Мы проводим тренинги для взрослых: учим родителей понимать воих детей и принимать особенности их характеров.'
 				}, {
-				icon: 'b-mod',
+				icon: '8',
 				descr: 'Специалист по работе с детьми всегда с радостью расскажет об успехах именно вашего ребенка и ответит на все ваши вопросы о его развития.'
 				}]
 
