--- a/src/template/pages/index.pug
+++ b/src/template/pages/index.pug
@@ -123,12 +123,17 @@ html(lang='ru')
           'home.html',
           '01',
           'Home',
-          'Home page'
+          ''
         ], [
           'landing.html',
           '02',
           'Home landing',
-          'Landing page'
+          ''
+        ], [
+          'modals.html',
+          '03',
+          'Modals page',
+          ''
         ]
       ];
     header.
